java/java-tests/testData/codeInsight/daemonCodeAnalyzer/lambda/methodRef/SOE.java
import java.util.*;

class LambdaTest {
    public void testR() {
        <error descr="Variable expected">new ArrayList<String>() :: size</error> = ""; 

    }
}